--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@preact/signals": "^1.2.1",
+    "@preact/signals-react": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
